--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^9"
+    },
+    "require": {
+        "psr/http-message": "^1.0"
     }
 }
